--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Tim J. Schoonbeek</title>
+    <title>Carolus H.J. (Koen) Kusters</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="academicons-1.9.4/css/academicons.css">
-    <link rel="icon" href="logos/headset.png">
+    <!-- <link rel="icon" href="logos/headset.png"> -->
 
     <style>
         .logo_header {
@@ -170,11 +170,11 @@
             <div class="columns is-vcentered">
                 <div class="column">
                     <h1 class="title">
-                        Tim J. Schoonbeek
+                        Carolus H.J. (Koen) Kusters
                     </h1>
                     <h2 class="subtitle">
-                        Computer Vision PhD Candidate -- <a
-                            href="mailto:t.j.schoonbeek@tue.nl">t.j.schoonbeek@tue.nl</a>
+                        PhD Candidate Medical Computer Vision & AI -- <a
+                            href="mailto:c.h.j.kusters@tue.nl">c.h.j.kusters@tue.nl</a>
                     </h2>
                 </div>
             </div>
@@ -186,10 +186,13 @@
     <div class="container">
         <div class="columns is-vcentered">
             <div class="logo_colab">
-                <img src="logos/asml.png">
+                <img src="logos/tue.png">
             </div>
             <div class="logo_colab">
-                <img src="logos/tue.png">
+                <img src="logos/vca.png">
+            </div>
+            <div class="logo_colab">
+                <img src="logos/amsterdamumc.png">
             </div>
 <!--            <div class="logo_colab">-->
 <!--                <img src="logos/hri.png">-->
@@ -199,25 +202,24 @@
     </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
     <div class="container">
         <div class="columns">
             <div class="column is-one-third">
                 <figure class="image">
-                    <img src="TimSchoonbeek.jpg">
+                    <img src="KoenKusters.jpg">
                 </figure>
                 <h3 class="title is-3">About me</h3>
-                <p>Passionate about (egocentric) procedure understanding, computer vision, augmented reality,
-                    motorcycles, and learning Portuguese.</p>
-                <p STYLE="margin:10px 0px 10px 0px">Contact: <a href="mailto:t.j.schoonbeek@tue.nl">t.j.schoonbeek@tue.nl</a>.</p>
+                <p>Place here about me...</p>
+                <p STYLE="margin:10px 0px 10px 0px">Contact: <a href="mailto:c.h.j.kusters@tue.nl">c.h.j.kusters@tue.nl</a>.</p>
                 <div class="parent">
                     <div class="child float-left-child">
-                        <a href="https://scholar.google.com/citations?user=h_YDH0YAAAAJ" target="_blank">
+                        <a href="https://scholar.google.nl/citations?user=HmbH2AoAAAAJ" target="_blank">
                             <img src="logos/scholar.png" alt="Scholar" class="logo">
                         </a>
                     </div>
                     <div class="child float-left-child">
-                        <a href="https://www.linkedin.com/in/timschoonbeek" target="_blank">
+                        <a href="https://www.linkedin.com/in/koenkusters" target="_blank">
                             <img src="logos/linkedin.png" alt="LinkedIn" class="logo">
                         </a>
                     </div>
@@ -249,7 +251,7 @@
                             href="https://data.4tu.nl/datasets/b008dd74-020d-4ea4-a8ba-7bb60769d224" target="_blank" class="text">Data</a></p>
                             </div>
                         </a>
-                    </div>
+                    </div> 
                 </section>
                 <section class="publication">
                     <div class="column is-one-third">
@@ -306,8 +308,8 @@
                                 Dubbelman</p>
                             <p class="venue">IEEE IV 2022 (single track oral presentation)</p>
                             <div class="links">
-                                <!--                <p><span class="icon"><i class="ai ai-arxiv"></i></span><a href="arxiv" target="_blank">arXiv</a></p>-->
-                                <p><span class="icon"><i class="ai ai-ieee"></i></span><a
+                                               <p><span class="icon"><i class="ai ai-arxiv"></i></span><a href="arxiv" target="_blank">arXiv</a></p>-->
+                                <!-- <p><span class="icon"><i class="ai ai-ieee"></i></span><a
                                         href="https://ieeexplore.ieee.org/abstract/document/9827228" target="_blank">IEEE
                                     proceedings</a></p>
                             </div>
@@ -335,11 +337,12 @@
                     </ul>
                 </section>
                 <section class="experience">
-                    <h4 class="title is-4">M.Sc Mechanical Engineering - Automotive Technology <br><i>Eindhoven
+                    <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Strong focus on computer vision and autonomous vehicles</li>
-                        <li>Graduated with honors (GPA 4.0)</li>
+                        <li>Strong focus on signal processing, machine learning, deep learning and computer vision</li>
+                        <li>Thesis: Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)</li>
+                        <li>Graduated with distinction Cum Laude</li>
                         <li>Graduation project <a href="https://ieeexplore.ieee.org/abstract/document/9827228"
                                                   target="_blank">published</a>, accepted as oral (5% of accepted
                             papers) at IEEE IV 2022
@@ -347,24 +350,26 @@
                     </ul>
                 </section>
                 <section class="experience">
-                    <h4 class="title is-4">Graduate internship <br><i>Honda Research Institute Europe</i></h4>
+                    <h4 class="title is-4">M.Sc. Internship <br><i>Philips Medical Systems B.V.</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Subject: Interaction-Aware Trajectory Prediction for Highway Driving using Graph Neural
-                            Networks</li>
-                        <li>Real-time trajectory prediction of surrounding vehicles for risk estimation.</li>
+                        <li>Project title: Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising</li>
+                        <li>Description: Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
                     </ul>
                 </section>
                 <section class="experience">
-                    <h4 class="title is-4">B.Sc Electrical Engineering - Automotive Technology <br><i>Eindhoven
+                    <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Thesis: Depth Estimator from Disparity and Segmented Images (8.5/10)</li>
+                        <li>Thesis: Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning (8.5/10)</li>
+                            <ul style="list-style-type:square"></ul>
+                            <li>Description: Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
+                            <li>Grade: 8.5/10</li> 
                     </ul>
                 </section>
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 
 <!-- EMPTY PUBLICATION ENTRY: -->
