--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="academicons-1.9.4/css/academicons.css">
-    <!-- <link rel="icon" href="logos/headset.png"> -->
+    <link rel="icon" href="logos/computer_vision.jpg">
 
     <style>
         .logo_header {
@@ -318,17 +318,10 @@
                 </section>
                 <h3 class="title is-3" id="Exp">Experiences</h3>
                 <section class="experience">
-                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i> and <i>ASML
-                        Research</i></h4>
+                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Project title: Advanced Augmented Reality Solutions for AI-based Servitization</li>
-                        <li>This PhD project at Eindhoven University of Technology and ASML Research aims at
-                            automatically extracting relevant and meaningful information from egocentric procedural
-                            actions within dynamic, high-tech manufacturing and maintenance environments. Given the wide
-                            variety of procedural actions and the significant downside of mistakes, a scalable and
-                            robust algorithm is required to support the ASML engineers. We intend to deploy such
-                            algorithms on augmented reality (AR) devices to provide advanced support during procedural
-                            actions. As part of the project, I am teaching a module on efficient video-based algorithms
+                        <li>Project title: ...</li>
+                        <li>...
                         </li>
                         <li>Supervision of dr.ir. Peter de With (IEEE Life Fellow), dr. Hans Onvlee (ASML Senior
                             Researcher), dr.ir. Fons van der Sommen (Professor at TU/e), dr. Jacek Kustra
