--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <section class="experience">
                     <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Project title: ...</li>
+                        <li>Project title: ....</li>
                         <li>...
                         </li>
                         <li>Supervision of dr.ir. Peter de With (IEEE Life Fellow), dr. Hans Onvlee (ASML Senior
