Update About Me

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
 </section>
 
-<!-- <section class="section">
+<section class="section">
     <div class="container">
         <div class="columns">
             <div class="column is-one-third">
@@ -225,7 +225,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column">
+            <!--<div class="column">
                 <h3 class="title is-3" id="Pubs">Publications</h3>
                 <section class="publication">
                     <div class="column is-one-third">
