--- a/index.html
+++ b/index.html
@@ -225,21 +225,19 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="column">
+            <div class="column">
                 <h3 class="title is-3" id="Pubs">Publications</h3>
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image">
-                            <img src="publications/industreal.png">
+                            <img src="logos/vca.png">
                         </div>
                     </div>
                     <div class="details">
-                        <a href="industreal.html" target="_blank">
-                            <h4 class="title is-4">IndustReal: A Dataset for Procedure Step Recognition Handling
-                                Execution Errors in Egocentric Videos in an Industrial-Like Setting</h4>
-                            <p class="authors"><u>Tim J. Schoonbeek</u>, Tim Houben, Hans Onvlee, Peter H.N. de With,
-                                Fons van der Sommen</p>
-                            <p class="venue">WACV 2024</p>
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">...</h4>
+                            <p class="authors"><u>C.H.J. Kusters</u></p>
+                            <p class="venue">...</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-arxiv"></i></span><a
                                         href="https://arxiv.org/abs/2310.17323" target="_blank">arXiv</a>
@@ -253,69 +251,69 @@
                         </a>
                     </div> 
                 </section>
-                <section class="publication">
-                    <div class="column is-one-third">
-                        <div class="image">
-                            <img src="publications/beyondAR.png">
-                        </div>
-                    </div>
-                    <div class="details">
-                        <a href="beyondAR.html" target="_blank">
-                            <h4 class="title is-4">Beyond Action Recognition: Extracting Meaningful Information from
-                                Procedure Recordings</h4>
-                            <p class="authors"><u>Tim J. Schoonbeek</u>, Hans Onvlee, Pierluigi Frisco, Peter H.N. de
-                                With, Fons van der Sommen</p>
-                            <p class="venue">IEEE VR 2023 (short paper)</p>
-                            <div class="links">
-                                <p><span class="icon"><i class="ai ai-ieee"></i></span><a
-                                        href="https://ieeexplore.ieee.org/abstract/document/10108640" target="_blank">IEEE
-                                    proceedings</a></p>
-                            </div>
-                        </a>
-                    </div>
-                </section>
-                <section class="publication">
-                    <div class="column is-one-third">
-                        <div class="image">
-                            <img src="publications/automaticlogging.png">
-                        </div>
-                    </div>
-                    <div class="details">
-                        <a href="automaticlogging.html" target="_blank">
-                            <h4 class="title is-4">Augmented Reality for Automatically Generating Robust Manufacturing
-                                and Maintenance Logs</h4>
-                            <p class="authors"><u>Tim J. Schoonbeek</u>, Pierluigi Frisco, Hans Onvlee, Peter H.N. de
-                                With, Fons van der Sommen</p>
-                            <p class="venue">London Imaging Meeting 2022 (oral presentation)</p>
-                            <div class="links">
-                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
-                                        href="https://library.imaging.org/lim/articles/3/1/15" target="_blank">Publication</a>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </section>
-                <section class="publication">
-                    <div class="column is-one-third">
-                        <div class="image">
-                            <img src="publications/risknet.png">
-                        </div>
-                    </div>
-                    <div class="details">
-                        <a href="risknet.html" target="_blank">
-                            <h4 class="title is-4">Learning to Predict Collision Risk from Simulated Video Data</h4>
-                            <p class="authors"><u>Tim J. Schoonbeek</u>, Fabrizio J. Piva, Hamid R. Abdolhay, Gijs
-                                Dubbelman</p>
-                            <p class="venue">IEEE IV 2022 (single track oral presentation)</p>
-                            <div class="links">
-                                               <p><span class="icon"><i class="ai ai-arxiv"></i></span><a href="arxiv" target="_blank">arXiv</a></p>-->
-                                <!-- <p><span class="icon"><i class="ai ai-ieee"></i></span><a
-                                        href="https://ieeexplore.ieee.org/abstract/document/9827228" target="_blank">IEEE
-                                    proceedings</a></p>
-                            </div>
-                        </a>
-                    </div>
-                </section>
+<!--                <section class="publication">-->
+<!--                    <div class="column is-one-third">-->
+<!--                        <div class="image">-->
+<!--                            <img src="publications/beyondAR.png">-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="details">-->
+<!--                        <a href="beyondAR.html" target="_blank">-->
+<!--                            <h4 class="title is-4">Beyond Action Recognition: Extracting Meaningful Information from-->
+<!--                                Procedure Recordings</h4>-->
+<!--                            <p class="authors"><u>Tim J. Schoonbeek</u>, Hans Onvlee, Pierluigi Frisco, Peter H.N. de-->
+<!--                                With, Fons van der Sommen</p>-->
+<!--                            <p class="venue">IEEE VR 2023 (short paper)</p>-->
+<!--                            <div class="links">-->
+<!--                                <p><span class="icon"><i class="ai ai-ieee"></i></span><a-->
+<!--                                        href="https://ieeexplore.ieee.org/abstract/document/10108640" target="_blank">IEEE-->
+<!--                                    proceedings</a></p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </section>-->
+<!--                <section class="publication">-->
+<!--                    <div class="column is-one-third">-->
+<!--                        <div class="image">-->
+<!--                            <img src="publications/automaticlogging.png">-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="details">-->
+<!--                        <a href="automaticlogging.html" target="_blank">-->
+<!--                            <h4 class="title is-4">Augmented Reality for Automatically Generating Robust Manufacturing-->
+<!--                                and Maintenance Logs</h4>-->
+<!--                            <p class="authors"><u>Tim J. Schoonbeek</u>, Pierluigi Frisco, Hans Onvlee, Peter H.N. de-->
+<!--                                With, Fons van der Sommen</p>-->
+<!--                            <p class="venue">London Imaging Meeting 2022 (oral presentation)</p>-->
+<!--                            <div class="links">-->
+<!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
+<!--                                        href="https://library.imaging.org/lim/articles/3/1/15" target="_blank">Publication</a>-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </section>-->
+<!--                <section class="publication">-->
+<!--                    <div class="column is-one-third">-->
+<!--                        <div class="image">-->
+<!--                            <img src="publications/risknet.png">-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="details">-->
+<!--                        <a href="risknet.html" target="_blank">-->
+<!--                            <h4 class="title is-4">Learning to Predict Collision Risk from Simulated Video Data</h4>-->
+<!--                            <p class="authors"><u>Tim J. Schoonbeek</u>, Fabrizio J. Piva, Hamid R. Abdolhay, Gijs-->
+<!--                                Dubbelman</p>-->
+<!--                            <p class="venue">IEEE IV 2022 (single track oral presentation)</p>-->
+<!--                            <div class="links">-->
+<!--                                               <p><span class="icon"><i class="ai ai-arxiv"></i></span><a href="arxiv" target="_blank">arXiv</a></p>&ndash;&gt;-->
+<!--                                 <p><span class="icon"><i class="ai ai-ieee"></i></span><a-->
+<!--                                        href="https://ieeexplore.ieee.org/abstract/document/9827228" target="_blank">IEEE-->
+<!--                                    proceedings</a></p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </section>-->
                 <h3 class="title is-3" id="Exp">Experiences</h3>
                 <section class="experience">
                     <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>
