--- a/index.html
+++ b/index.html
@@ -258,9 +258,7 @@
                         <li>Project title: .....</li>
                         <li>...
                         </li>
-                        <li>Supervision of dr.ir. Peter de With (IEEE Life Fellow), dr. Hans Onvlee (ASML Senior
-                            Researcher), dr.ir. Fons van der Sommen (Professor at TU/e), dr. Jacek Kustra
-                            (Group Lead at ASML Research)
+                        <li>Supervision of dr.ir. Peter de With (IEEE Life Fellow), dr.ir. Fons van der Sommen (Professor at TU/e)
                         </li>
                     </ul>
                 </section>
