--- a/index.html
+++ b/index.html
@@ -269,9 +269,6 @@
                         <li>Strong focus on signal processing, machine learning, deep learning and computer vision</li>
                         <li>Thesis: Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)</li>
                         <li>Graduated with distinction Cum Laude</li>
-                        <li>Graduation project <a href="https://ieeexplore.ieee.org/abstract/document/9827228"
-                                                  target="_blank">published</a>, accepted as oral (5% of accepted
-                            papers) at IEEE IV 2022
                         </li>
                     </ul>
                 </section>
@@ -287,9 +284,9 @@
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
                         <li>Thesis: Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning (8.5/10)</li>
-                            <ul style="list-style-type:square"></ul>
+                            <ul style="list-style-type:square">
                             <li>Description: Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
-                            <li>Grade: 8.5/10</li> 
+                            <li>Grade: 8.5/10</li></ul>
                     </ul>
                 </section>
             </div>
