--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@
                         </a>
                     </div>
                     <div class="child float-left-child">
+                        <a href="https://orcid.org/0009-0004-3114-3888" target="_blank">
+                            <img src="logos/orcid.png" alt="Orcid" class="logo">
+                        </a>
+                    </div>
+                    <div class="child float-left-child">
                         <a href="https://www.linkedin.com/in/koenkusters" target="_blank">
                             <img src="logos/linkedin.png" alt="LinkedIn" class="logo">
                         </a>
@@ -258,7 +263,7 @@
                         <li>Project title: .....</li>
                         <li>...
                         </li>
-                        <li>Supervision of dr.ir. Peter de With (IEEE Life Fellow), dr.ir. Fons van der Sommen (Professor at TU/e)
+                        <li>Supervision of prof.dr.ir. Peter de With (IEEE Life Fellow), dr.ir. Fons van der Sommen (Professor at TU/e)
                         </li>
                     </ul>
                 </section>
@@ -283,16 +288,17 @@
                     <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Thesis: Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning (8.5/10)</li>
+                        <li>Thesis: Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning</li>
                             <ul style="list-style-type:square">
                             <li>Description: Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
-                            <li>Grade: 8.5/10</li></ul>
+                            <li>Grade: 8.5/10</li>
+                            </ul>
                     </ul>
                 </section>
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 
 <!-- EMPTY PUBLICATION ENTRY: -->
