--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
                             <img src="logos/scholar.png" alt="Scholar" class="logo">
                         </a>
                     </div>
-                    <div class="child float-left-child">
-                        <a href="https://orcid.org/0009-0004-3114-3888" target="_blank">
-                            <img src="logos/orcid.png" alt="Orcid" class="logo">
-                        </a>
-                    </div>
+<!--                    <div class="child float-left-child">-->
+<!--                        <a href="https://orcid.org/0009-0004-3114-3888" target="_blank">-->
+<!--                            <img src="logos/orcid.png" alt="Orcid" class="logo">-->
+<!--                        </a>-->
+<!--                    </div>-->
                     <div class="child float-left-child">
                         <a href="https://www.linkedin.com/in/koenkusters" target="_blank">
                             <img src="logos/linkedin.png" alt="LinkedIn" class="logo">
@@ -257,33 +257,33 @@
                     </div> 
                 </section>
                 <h3 class="title is-3" id="Exp">Experiences</h3>
-                <section class="experience">
-                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>
-                    <ul style="list-style-type:circle">
-                        <li>Project title: .....</li>
-                        <li>...
-                        </li>
-                        <li>Supervision of prof.dr.ir. Peter de With (IEEE Life Fellow), dr.ir. Fons van der Sommen (Professor at TU/e)
-                        </li>
-                    </ul>
-                </section>
-                <section class="experience">
-                    <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven
-                        University of Technology</i></h4>
-                    <ul style="list-style-type:circle">
-                        <li>Strong focus on signal processing, machine learning, deep learning and computer vision</li>
-                        <li>Thesis: Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)</li>
-                        <li>Graduated with distinction Cum Laude</li>
-                        </li>
-                    </ul>
-                </section>
-                <section class="experience">
-                    <h4 class="title is-4">M.Sc. Internship <br><i>Philips Medical Systems B.V.</i></h4>
-                    <ul style="list-style-type:circle">
-                        <li>Project title: Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising</li>
-                        <li>Description: Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
-                    </ul>
-                </section>
+<!--                <section class="experience">-->
+<!--                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>-->
+<!--                    <ul style="list-style-type:circle">-->
+<!--                        <li>Project title: .....</li>-->
+<!--                        <li>...-->
+<!--                        </li>-->
+<!--                        <li>Supervision of prof.dr.ir. Peter de With (IEEE Life Fellow), dr.ir. Fons van der Sommen (Professor at TU/e)-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </section>-->
+<!--                <section class="experience">-->
+<!--                    <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven-->
+<!--                        University of Technology</i></h4>-->
+<!--                    <ul style="list-style-type:circle">-->
+<!--                        <li>Strong focus on signal processing, machine learning, deep learning and computer vision</li>-->
+<!--                        <li>Thesis: Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)</li>-->
+<!--                        <li>Graduated with distinction Cum Laude</li>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </section>-->
+<!--                <section class="experience">-->
+<!--                    <h4 class="title is-4">M.Sc. Internship <br><i>Philips Medical Systems B.V.</i></h4>-->
+<!--                    <ul style="list-style-type:circle">-->
+<!--                        <li>Project title: Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising</li>-->
+<!--                        <li>Description: Investigated the impact of generator and discriminator architectures within the cGAN framework</li>-->
+<!--                    </ul>-->
+<!--                </section>-->
                 <section class="experience">
                     <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
