--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
                             <img src="logos/scholar.png" alt="Scholar" class="logo">
                         </a>
                     </div>
-<!--                    <div class="child float-left-child">-->
-<!--                        <a href="https://orcid.org/0009-0004-3114-3888" target="_blank">-->
-<!--                            <img src="logos/orcid.png" alt="Orcid" class="logo">-->
-<!--                        </a>-->
-<!--                    </div>-->
+                    <div class="child float-left-child">
+                        <a href="https://orcid.org/0009-0004-3114-3888" target="_blank">
+                            <img src="logos/orcid.png" alt="Orcid" class="logo">
+                        </a>
+                    </div>
                     <div class="child float-left-child">
                         <a href="https://www.linkedin.com/in/koenkusters" target="_blank">
                             <img src="logos/linkedin.png" alt="LinkedIn" class="logo">
@@ -288,7 +288,7 @@
                     <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Thesis: Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning</li>
+                        <li>Thesis title: <br>"Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning"</li>
                             <ul style="list-style-type:square">
                             <li>Description: Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
                             <li>Grade: 8.5/10</li>
