--- a/index.html
+++ b/index.html
@@ -267,28 +267,37 @@
 <!--                        </li>-->
 <!--                    </ul>-->
 <!--                </section>-->
-<!--                <section class="experience">-->
-<!--                    <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven-->
-<!--                        University of Technology</i></h4>-->
-<!--                    <ul style="list-style-type:circle">-->
-<!--                        <li>Strong focus on signal processing, machine learning, deep learning and computer vision</li>-->
-<!--                        <li>Thesis: Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)</li>-->
-<!--                        <li>Graduated with distinction Cum Laude</li>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </section>-->
-<!--                <section class="experience">-->
-<!--                    <h4 class="title is-4">M.Sc. Internship <br><i>Philips Medical Systems B.V.</i></h4>-->
-<!--                    <ul style="list-style-type:circle">-->
-<!--                        <li>Project title: Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising</li>-->
-<!--                        <li>Description: Investigated the impact of generator and discriminator architectures within the cGAN framework</li>-->
-<!--                    </ul>-->
-<!--                </section>-->
+                <section class="experience">
+                    <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven
+                        University of Technology</i></h4>
+                    <ul style="list-style-type:circle">
+                        <li>Specialization: signal processing, machine learning, deep learning and computer vision</li>
+                        <li>Thesis title: <i>"Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)"</i></li>
+                            <ul style="list-style-type:square">
+                            <li>Description: Investigated the improvement of performance, robustness and reliability of CNNs for CRP classification</li>
+                            <li>Grade: 9.0/10</li>
+                            </ul>
+                        <li><a href="https://doi.org/10.1117/12.2606801" target="_blank">Conference Proceeding (SPIE Medical Imaging 2022)</a> </li>
+                        <li>Graduated with distinction <i>Cum Laude</i></li>
+                        </li>
+                    </ul>
+                </section>
+                <section class="experience">
+                    <h4 class="title is-4">M.Sc. Internship <br><i>Philips Medical Systems B.V.</i></h4>
+                    <ul style="list-style-type:circle">
+                        <li>Project title: <i>"Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising"</i></li>
+                            <ul style="list-style-type:square">
+                            <li>Description: Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
+                            <li>Grade: 9.0/10</li>
+                            </ul>
+                        <li><a href="10.1109/EMBC46164.2021.9629600" target="_blank">Conference Proceeding (IEEE EMBC 2021)</a> </li>
+                    </ul>
+                </section>
                 <section class="experience">
                     <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Thesis title: <br>"Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning"</li>
+                        <li>Thesis title: <i>"Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning"</i></li>
                             <ul style="list-style-type:square">
                             <li>Description: Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
                             <li>Grade: 8.5/10</li>
